make the background black

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link rel="icon" type="image/svg+xm" href="https://commons.wikimedia.org/wiki/File:Netflix_2015_N_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix + React + TS</title>
+    <style>
+      .app {
+        background-color: black;
+      }
+    </style>
   </head>
-  <body>
+  <body class="app">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
